fix(menu): hidden behind background elements (fix #74)

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -9,6 +9,7 @@
     --bl-menu-item-color: var(--bl-clr-gray-800);
     --bl-menu-divider-color: var(--bl-border-color);
     --bl-menu-item-padding: 0.75rem;
+    --bl-menu-zindex: 20;
 
     border: var(--bl-border-color) 1px solid;
     border-radius: var(--bl-border-radius);
@@ -18,6 +19,7 @@
     font-size: var(--bl-fs-base);
     line-height: 1.25rem;
     position: absolute;
+    z-index: var(--bl-menu-zindex);
     display: none;
 
     transition-duration: var(--bl-transition-md);
